<resources>
    <string name="app_name">WanAndroid</string>
    <string name="jifen">我的积分</string>
    <string name="collect">我的收藏</string>
    <string name="todo">TODO</string>
    <string name="ye_jms">夜间模式</string>
    <string name="seeting">系统设置</string>
    <string name="about_me">关于我们</string>
    <string name="t_login">退出登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="zhishi">知识体系</string>
    <string name="accout">公众号</string>
    <string name="project">项目</string>
    <string name="navigition">导航</string>


    <!-- Login -->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="go_login">去登陆</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="no_account">没有账号？去注册</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="have_account">已有账户？去登录</string>
    <string name="enter_password_again">再输入一次密码</string>
    <string name="confirm_password_not_empty">确认密码不能为空</string>
    <string name="password_cannot_match">两词密码不相同</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="confirm_logout">确认退出登录？</string>
    <string name="logout_success">已退出登录</string>
    <string name="logout_ing">正在退出登录</string>
    <string name="login_tint">请先登录</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="user_login">用户登录</string>
    <string name="login_tip">请使用WanAndroid账号登录！</string>
    <string name="user_register">注册用户</string>
    <string name="register_tip">用户注册后才可以登录！</string>

</resources>
